--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "crypto": "^1.0.1",
     "debug": "^2.6.3",
     "ejs": "^2.5.7",
+    "he": "^1.1.1",
     "heredoc": "^1.3.1",
+    "iconv-lite": "^0.4.19",
+    "jquery": "^3.2.1",
+    "jsonp": "^0.2.1",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
@@ -29,6 +33,7 @@
     "pug": "^2.0.0-rc.1",
     "request": "^2.83.0",
     "sha1": "^1.1.1",
+    "superagent": "^3.8.0",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
